# cpp-template

./: .clang-format  .ignore  CMakeLists.txt  README.md
script/: build.nu
src/: main.cpp
